--- a/triangulation/src/app/live/live.module.css
+++ b/triangulation/src/app/live/live.module.css
@@ -3,4 +3,14 @@
     top: 0;
     left: 0;
     image-rendering: pixelated;
+    width: 100vw;
+    height: 100vh;
+}
+
+body, html {
+    overflow: hidden;
+}
+
+#map {
+    display: none;
 }
